--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -21,6 +21,7 @@ License: You must have a valid license purchased only from themeforest(the above
   <title>{{title}}</title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="csrf-token" content="{{_csrfToken}}" />
 
   <!--begin::Fonts-->
   <link href="https://cdn.rawgit.com/innks/NanumSquareRound/master/nanumsquareround.css" rel="stylesheet" type="text/css">
